--- a/blog.html
+++ b/blog.html
@@ -36,9 +36,9 @@
             </article>
         </section>
        </main> 
-       <footer>Copyright &copy; 2019
+       <footer>Copyright &copy; 2021
        </footer>
-      </div> <!-- end of wrapper -->
+      </div>
 </body>
 </html>
 
